Fixed layout issue on small screen laptops

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,8 @@
 
 @theme{
   --breakpoint-lg:initial;
-  --breakpoint-lg:80rem
+  --breakpoint-lg:68rem;
+  --breakpoint-2xl:96rem;
 }
 
 @media (prefers-color-scheme: dark) {
